--- a/ToyProject/eye_blink_detector/eye_blink_detector.ipynb
+++ b/ToyProject/eye_blink_detector/eye_blink_detector.ipynb
@@ -21,9 +21,9 @@
    "id": "693f3b0b",
    "metadata": {},
    "source": [
-    "주제 : 업무 페이스 메이커\\\n",
-    "목적 : 카메라를 통해 PC사용자의 안면을 인식한 후, 표정을 검출하여 유저 상황에 따른 대처를 자동으로 해주는 프로그램 생성\\\n",
-    "사용할 모델 : RNN"
+    "주제 : 졸음 방지 프로그램\\\n",
+    "목적 : 카메라를 통해 PC사용자의 눈을 인식한 후, 사용자가 졸고 있음을 판단하고 알람으로 깨워주는 프로그램 생성\\\n",
+    "사용할 모델 : CNN"
    ]
   },
   {
